--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=2BRobots SAMI Library
-version=0.0.0
+name=Smart Motor Driver - SAMI
+version=1.0.0
 author=2BRobots
 maintainer=dannimakes <hi@2brobots.com>
-sentence=Arduino library for SAMI the Smart Motor Driver by 2BRobots.
-paragraph=Arduino library for SAMI the Smart Motor Driver by 2BRobots.
+sentence=Arduino library for SAMI the Smart Motor Driver by dannimakes.
+paragraph=Making advanced robots has never been so easy to anyone!!! Just solder the module to your motor and use this Arduino library to take precise PID control over the motor speed and travel distance via I2C bus.
 category=Device Control
 url=https://hackaday.io/project/158429-smart-motor-driver-for-robotics
 architectures=*
